--- a/PuntoVenta Code/nbproject/private/private.properties
+++ b/PuntoVenta Code/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Stephanie Mart\u00ednez\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/Users/fernando/Library/Application Support/NetBeans/8.2/build.properties
